        **   CHANGES IN DATA.TABLE VERSION 1.7.5   **
        **                                         **
        *********************************************

BUG FIXES

   o    merge()-ing a data.table where its key is not the first
        few columns in order now works correctly and without
        warning, fixing #1645. Thanks to Timothee Carayol for
        reporting.
        
USER VISIBLE CHANGES

   o    rbind now cross-refs colnames as data.frame does, rather 
        than always binding by column order, FR#1634. A warning is
        produced when the colnames are not in a consistent order.
        Thanks to Damian Betebenner for highlighting.


        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.7.4   **
        **                                         **
        *********************************************

BUG FIXES

   o    v1.7.3 failed CRAN checks (and could crash) in R pre-2.14.0.
        Over-allocation in v1.7.3 uses truelength which is initialized
        to 0 by R 2.14.0, but not initialized pre-2.14.0. This was
        known and coded for but only tested in 2.14.0 before previous
        release to CRAN.

NOTES

   o    Two unused C variables removed to pass warning from one CRAN
        check machine (r-devel-fedora). -Wno-unused removed from
        Makevars to catch this in future before submitting to CRAN.


        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.7.3   **
        **                                         **
        *********************************************
        
NEW FEATURES

    o   data.table now over-allocates its vector of column pointer slots
        (100 by default). This allows := to add columns fully by
        reference as suggested by Muhammad Waliji, #1646. When the 100